# pearl-algo

./: .coverage  .cursorignore  .cursorrules  .env.example  .gitignore  24_7_DEPLOYMENT_GUIDE.md  24_7_IMPLEMENTATION_STATUS.md  <MagicMock name='MarketAgentStateManager().state_dir.__truediv__()' id='125519756467600'>  =0.4.70  =3.8.0  ACCOUNT_ANALYSIS.md  AGENTS.md  AI_ONBOARDING_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  ARCHIVING_COMPLETE.md  AUTOMATED_TRADING_SUMMARY.md  BOT_OVERVIEW_AND_NEXT_STEPS.md  BUGFIXES_APPLIED.md  CHEAT_SHEET.md  CHEAT_SHEET.txt  CHEAT_SHEET_SHORT.md  CLAUDE.md  CLEANUP_ANALYSIS_REPORT.md  CLEANUP_COMPLETE.md  CLEANUP_CONSOLIDATION_PLAN.md  CLEANUP_IMPLEMENTATION_SUMMARY.md  CLEANUP_PLAN.md  CLEANUP_REVIEW_REPORT.md  CLEANUP_SUMMARY.md  CLI_QUICK_START.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SYSTEM_OVERVIEW.md  CONNECTION_STATUS.md  CONNECT_VNC_NOW.md  DASHBOARD_FIX.md  DASHBOARD_MENU.md  DIAGNOSTICS.md  (+153 more)
.claude/: settings.local.json
.cursor/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: coverage_floors.yaml  dependabot.yml  trading_bots_test_allowlist.yaml
analysis/: session_analyzer.py  trade_outcome_tracker.py
apps/: HALLUCINATE.md
archive/: README.md  ib_provider_deprecated.py
config/: base.yaml  base.yaml.backup-20260219-201928  base.yaml.backup-20260220-080248  base.yaml.backup-20260224-184125  base.yaml.backup-feb19-emergency  base.yaml.orig  config.production.yaml  config.yaml  data_providers.yaml  micro_strategy_config.yaml  micro_symbols_fix.yaml  ml_config.yaml  options_trading.yaml  pearl_bots_example.yaml  risk_profiles.yaml  underliers.yaml
dashboard/: package.json
data/: t1_news_2026.json
docs/: 24_7_OPERATIONS_GUIDE.md  ACCOUNT_GUIDE.md  ADVANCED_EXITS_IMPLEMENTATION.md  AGENT_BRAIN_GUIDE.md  AI_PATCH_GUIDE.md  AI_PROJECT_CONTEXT.md  AI_SESSION_LOG.md  ARCHITECTURE.md  ATS_ROLLOUT_GUIDE.md  AUDIT_SYSTEM.md  AUTOMATED_TRADING.md  BACKTESTING_GUIDE.md  BASELINE_METRICS_2026-02-04.md  CHART_DATA_FORMAT.md  CHART_GENERATOR_ALTERNATIVES.md  CHART_STRATEGY.md  CHART_VISUALIZATION.md  CHART_VISUALIZATION_BUILD_EXPLANATION.md  CHART_VISUAL_SCHEMA.md  CHEAT_SHEET.md  CLAUDE_MONITOR_GUIDE.md  CLEANUP_CONSOLIDATION_REPORT.md  CLEANUP_REPORT_20260121.md  CLI_CONSOLIDATION_PLAN.md  CLI_IMPLEMENTATION_SUMMARY.md  CODEBASE_REVIEW_RESEARCH_PLAYBOOK.md  CODESPACES.md  COMPATIBILITY_SURFACES.md  CONFIGURATION_MAP.md  CURRENT_OPERATING_MODEL.md  DEPLOYMENT_COMPLETE.md  DIAGNOSTIC_REPORT.md  DOC_HIERARCHY.md  DR_RUNBOOK.md  FIX_MOBILE_DISCONNECT.md  FUTURES_RE_ENABLEMENT.md  FUTURE_PROVIDERS.md  GATEWAY.md  GATEWAY_QUICK_REFERENCE.md  IBKR_CONNECTION_SETUP.md  (+65 more)
indicators/: EMA_Crossover.pine  Supply & Demand Visible Range (Lux).pine  Trading Sessions.pine
legacy_backup/: README.md
live-chart/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
memory/: 2026-04-03.md
models/: signal_filter_v1.joblib
pearl_ai/: __init__.py  api_router.py  brain.py  cache.py  classifier.py  config.py  data_access.py  llm_claude.py  llm_mock.py  memory.py  metrics.py  narrator.py  output_validator.py  tools.py  types.py
pearlalgo_web_app/: jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
pearlalgo_web_app_dev/: jest.config.js  middleware.ts  package-lock.json
prompts/: README.md  project_cleanup.md
scripts/: README_SYNC.md  __init__.py  analyze_performance.py  automated_trading.py  automated_trading.py.DEPRECATED  automated_trading.service  check-positions.sh  check_api_logs.py  check_nq_agent_status.sh  check_session_config.py  check_tradovate.py  cleanup_unnecessary_files.sh  comprehensive_dashboard.py  configure_ibc_readonly.sh  configure_ibgateway_api.sh  daily_report.py  daily_workflow.py  dashboard.py  debug_env.py  debug_ibkr.py  (+89 more)
(+1496 files in other folders)
