[project]
name = "pearlalgo-dev-ai-agents"
version = "0.2.4"
description = "Simple NQ futures trading agent with IBKR connection and Telegram notifications"
authors = [{ name = "PearlAlgo", email = "dev@pearlalgo.ai" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=2.0,<3.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "python-dotenv>=1.0,<2.0",
    "loguru>=0.7.0,<1.0",
    "python-telegram-bot>=20.0,<22.0",
    "PyYAML>=6.0,<7.0",
    "pytz>=2024.1",
    "ib-insync>=0.9.86,<1.0",
    "pyarrow>=16.0.0,<18.0",
    "aiohttp>=3.10,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0", "ruff>=0.6", "mypy>=1.11.0", "pandas-stubs>=2.0", "types-PyYAML>=6.0", "types-pytz>=2024.1"]
llm = ["openai>=1.40.0", "anthropic>=0.40.0", "httpx>=0.27.0"]
all = ["openai>=1.40.0", "anthropic>=0.40.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Avoid accidentally bundling non-package artifacts (e.g., Next.js node_modules)
# into wheels/sdists. We explicitly specify required package data below.
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["pearlalgo", "pearlalgo.*"]
namespaces = false
exclude = ["pearlalgo_web_app*"]

[tool.setuptools.package-data]
"pearlalgo.pearl_ai" = ["eval/datasets/*.json"]

